# azure-app-to-get-image-details-from-acr

./: .dockerignore  Dockerfile  README.md  acr_images.py  azure_resource_graph_query.py  date_time.py  entrypoint.sh  pyproject.toml  streamlit.py
.github/: dependabot.yml
.github/workflows/: build-ci.yaml
